--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                 <div class="service-card">
                                     <div class="service-card-block">
                                         <h3>Заказ и продажа инвалидных подъемников к подъездам.</h3>
-                                        <p>Реализация продукции для МГН и инвалидов.</p>
+                                        <p>Реализация продукции для МГН (маломобильных групп населения и инвалидов) и инвалидов.</p>
                                     </div>
                                     <!-- <div class="service-card-block">
                                         <a target="_blank" href="./img/services/7.jpg">
@@ -530,7 +530,7 @@
                                     <p>Изготавливаются с верхним расположением машинного помещения.</p>
                                 </li>
                                 <li>
-                                    <p>Самое распространённое лифтовое оборудование в многоэтажных зданиях – это пассажирские лифты грузоподъемностью 400 кг, вместимостью 5 пассажиров и со скоростью подъема 1,6 м/с.
+                                    <p>Самое распространённое лифтовое оборудование в многоэтажных зданиях – это пассажирские лифты грузоподъемностью 400 кг, вместимостью 5 пассажиров и со скоростью подъема до 1,6 м/с.
                                     </p>
                                     <!-- <br> -->
                                     <span class="characteristic">Характеристики:</span>
@@ -540,7 +540,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <p>Еще одно из распространённого лифтового оборудования – это пассажирские лифты грузоподъемностью 630 кг, вместимостью 8 пассажиров, скорость подъема 1,6 м/с.
+                                    <p>Ещё одно из типовых решений – это пассажирские лифты грузоподъемностью 630 кг, вместимостью 8 пассажиров, скорость подъема до 1,6 м/с.
                                     </p>
                                     <!-- <br> -->
                                     <span class="characteristic">Характеристики:</span>
