--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                 <div class="service-card">
                                     <div class="service-card-block">
                                         <h3>Заказ и продажа инвалидных подъемников к подъездам.</h3>
-                                        <p>Реализация продукции для МГН (маломобильных групп населения и инвалидов) и инвалидов.</p>
+                                        <p>Реализация продукции для МГН (маломобильных групп населения) и инвалидов.</p>
                                     </div>
                                     <!-- <div class="service-card-block">
                                         <a target="_blank" href="./img/services/7.jpg">
