--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#contacts">Контакты</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link desktop" href="img/Tlz-Catalog.pdf"><span
                                         class="catalog">Каталог</span></a>
                                 <a class="nav-link mobile" href="img/Tlz-Catalog.pdf" download><span
                                         class="catalog">Каталог</span></a>
-                            </li>
+                            </li> -->
                         </ul>
                         <div>
                             <a class="main-header__login" href="#feedback">Отправить сообщение</a>
